--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -110,7 +110,7 @@
         min-height: 85vh;
         display: flex;
         align-items: center;
-        background: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?auto=format&fit=crop&q=80&w=1920');
+        background: url('/images/audi-rs-hero.png');
         background-size: cover;
         background-position: center;
         color: white;
