no /vehicles page anymore

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@
             <h2 class="section-title">Featured <span class="text-primary">Vehicles</span></h2>
             <p class="section-subtitle">Discover our hand-picked collection of prestigious vehicles.</p>
         </div>
-        <a href="/vehicles" class="view-all-link">View All <i class="fas fa-arrow-right ml-2"></i></a>
+        <a href="/sale" class="view-all-link">View All <i class="fas fa-arrow-right ml-2"></i></a>
     </div>
     
     <div id="featuredListings" class="listings-grid">
