--- a/Views/Listings/Details.cshtml
+++ b/Views/Listings/Details.cshtml
@@ -194,7 +194,7 @@
                                     
                                     if (deleteResponse.ok) {
                                         alert('Listing deleted successfully');
-                                        window.location.href = '/vehicles';
+                                        window.location.href = `/${type}`;
                                     } else {
                                         alert('Failed to delete listing');
                                     }
