more car brands

--- a/Views/Listings/Sale.cshtml
+++ b/Views/Listings/Sale.cshtml
@@ -35,10 +35,59 @@
                         <h6 class="filter-section-title">Brand & Model</h6>
                         <div class="filter-group">
                             <label class="filter-label">Make</label>
-                            <div class="input-with-icon">
-                                <i class="fas fa-car icon-blue"></i>
-                                <input type="text" name="Brand" placeholder="e.g. Porsche" class="filter-input">
-                            </div>
+                            <select name="BrandId" class="filter-input no-icon">
+                                <option value="">All Brands</option>
+                                <option value="1">Audi</option>
+                                <option value="2">BMW</option>
+                                <option value="3">Mercedes</option>
+                                <option value="4">Porsche</option>
+                                <option value="5">Volkswagen</option>
+                                <option value="6">Toyota</option>
+                                <option value="7">Ford</option>
+                                <option value="8">Renault</option>
+                                <option value="9">Peugeot</option>
+                                <option value="10">Citroen</option>
+                                <option value="11">Fiat</option>
+                                <option value="12">Hyundai</option>
+                                <option value="13">Kia</option>
+                                <option value="14">Nissan</option>
+                                <option value="15">Honda</option>
+                                <option value="16">Mazda</option>
+                                <option value="17">Mitsubishi</option>
+                                <option value="18">Suzuki</option>
+                                <option value="19">Tesla</option>
+                                <option value="20">Volvo</option>
+                                <option value="21">Land Rover</option>
+                                <option value="22">Jaguar</option>
+                                <option value="23">Ferrari</option>
+                                <option value="24">Lamborghini</option>
+                                <option value="25">Maserati</option>
+                                <option value="26">Aston Martin</option>
+                                <option value="27">Bentley</option>
+                                <option value="28">Rolls-Royce</option>
+                                <option value="29">Alfa Romeo</option>
+                                <option value="30">Lexus</option>
+                                <option value="31">Jeep</option>
+                                <option value="32">Chevrolet</option>
+                                <option value="33">Dodge</option>
+                                <option value="34">Chrysler</option>
+                                <option value="35">Cadillac</option>
+                                <option value="36">GMC</option>
+                                <option value="37">RAM</option>
+                                <option value="38">Subaru</option>
+                                <option value="39">Isuzu</option>
+                                <option value="40">Infiniti</option>
+                                <option value="41">Acura</option>
+                                <option value="42">Genesis</option>
+                                <option value="43">Cupra</option>
+                                <option value="44">Seat</option>
+                                <option value="45">Skoda</option>
+                                <option value="46">Mini</option>
+                                <option value="47">Smart</option>
+                                <option value="48">Dacia</option>
+                                <option value="49">Lada</option>
+                                <option value="50">MG</option>
+                            </select>
                         </div>
                         <div class="filter-group mt-3">
                             <label class="filter-label">Model</label>
