--- a/Views/Listings/Rent.cshtml
+++ b/Views/Listings/Rent.cshtml
@@ -145,8 +145,8 @@
                         <div class="filter-group mt-3">
                             <label class="filter-label">Year Range</label>
                             <div class="dual-inputs">
-                                <input type="number" name="MinYear" placeholder="From" class="filter-input no-icon control-green">
-                                <input type="number" name="MaxYear" placeholder="To" class="filter-input no-icon control-green">
+                                <input type="number" name="MinYear" value="1900" placeholder="From" class="filter-input no-icon control-green">
+                                <input type="number" name="MaxYear" value="2100" placeholder="To" class="filter-input no-icon control-green">
                             </div>
                         </div>
                         <div class="filter-group mt-3">
